# Serverless-Facebook-Streaming

./: README.md  pyproject.toml  stream.py
infrastructure/: README.md  ecr.tf  ecs.tf  iam.tf  main.tf  network.tf  variables.tf
services/ffmpeg-streamer-image/: Dockerfile
