[tool.poetry]
name = "ffmpeg-s3-facebook"
version = "0.1.0"
description = ""
authors = ["Alex Mills <alex@alexmills.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

